--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 body {
+    bgcolor: red;
     font-family: Arial, sans-serif;
     color: #ffffff;
     margin: 0;
