--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 body {
-    bgcolor: red;
     font-family: Arial, sans-serif;
-    color: #ffffff;
+    color: red;
     margin: 0;
     padding: 0;
 }
